--- a/TravelAgency/TravelAgency.csproj
+++ b/TravelAgency/TravelAgency.csproj
@@ -144,10 +144,28 @@
     <Compile Include="ExpensesPayment.Designer.cs">
       <DependentUpon>ExpensesPayment.cs</DependentUpon>
     </Compile>
-    <Compile Include="VendorPayment.cs">
+    <Compile Include="Financials\ExchangeCurrency.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="VendorPayment.Designer.cs">
+    <Compile Include="Financials\ExchangeCurrency.Designer.cs">
+      <DependentUpon>ExchangeCurrency.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Financials\GetReveneus.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Financials\GetReveneus.Designer.cs">
+      <DependentUpon>GetReveneus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="User Controls\AccountCurrenciesAmount.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="User Controls\AccountCurrenciesAmount.Designer.cs">
+      <DependentUpon>AccountCurrenciesAmount.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Financials\VendorPayment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Financials\VendorPayment.Designer.cs">
       <DependentUpon>VendorPayment.cs</DependentUpon>
     </Compile>
     <Compile Include="ClientPayment.cs">
@@ -180,10 +198,10 @@
     <Compile Include="ManageBankAccounts.Designer.cs">
       <DependentUpon>ManageBankAccounts.cs</DependentUpon>
     </Compile>
-    <Compile Include="Financial.cs">
+    <Compile Include="Financials\Financial.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Financial.Designer.cs">
+    <Compile Include="Financials\Financial.Designer.cs">
       <DependentUpon>Financial.cs</DependentUpon>
     </Compile>
     <Compile Include="ManageClientGroups.cs">
@@ -341,8 +359,17 @@
     <EmbeddedResource Include="ExpensesPayment.resx">
       <DependentUpon>ExpensesPayment.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Financials\ExchangeCurrency.resx">
+      <DependentUpon>ExchangeCurrency.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Financials\GetReveneus.resx">
+      <DependentUpon>GetReveneus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="User Controls\AccountCurrenciesAmount.resx">
+      <DependentUpon>AccountCurrenciesAmount.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Report1.rdlc" />
-    <EmbeddedResource Include="VendorPayment.resx">
+    <EmbeddedResource Include="Financials\VendorPayment.resx">
       <DependentUpon>VendorPayment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ClientPayment.resx">
@@ -362,7 +389,7 @@
       <DependentUpon>ManageBankAccounts.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Financial.resx">
+    <EmbeddedResource Include="Financials\Financial.resx">
       <DependentUpon>Financial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ManageClientGroups.resx">
