--- a/TravelAgency/TravelAgency.csproj
+++ b/TravelAgency/TravelAgency.csproj
@@ -145,7 +145,7 @@
       <DependentUpon>ExpensesPayment.cs</DependentUpon>
     </Compile>
     <Compile Include="Financials\ExchangeCurrency.cs">
-	      <SubType>Form</SubType>
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Reporting\LedgerTransactionsReport.cs">
       <SubType>Form</SubType>
@@ -158,9 +158,6 @@
     </Compile>
     <Compile Include="Reporting\Reports.Designer.cs">
       <DependentUpon>Reports.cs</DependentUpon>
-    </Compile>
-    <Compile Include="VendorPayment.cs">
-      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Financials\ExchangeCurrency.Designer.cs">
       <DependentUpon>ExchangeCurrency.cs</DependentUpon>
@@ -342,6 +339,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TravelAgenceMasterClass.cs" />
+    <Compile Include="Util\ComboItem.cs" />
     <Compile Include="Util\Payment.cs" />
     <Compile Include="Util\PaymentData.cs" />
     <EmbeddedResource Include="Administration\Adminstration.resx">
